src/log/build_2022-08-07_14-49-26/robot_control/stderr.log
  File "/home/louis/dev_robot/src/install/robot_control/lib/python3.8/site-packages/robot_control/Control_V3.py", line 71
    match self.motor_ctrl_state:
          ^
SyntaxError: invalid syntax

